add parameters to request

--- a/src/main/webapp/WEB-INF/views/first/goodbye.html
+++ b/src/main/webapp/WEB-INF/views/first/goodbye.html
@@ -5,7 +5,7 @@
 <h1>goodbye</h1>
 
 <p>goodbye</p>
-<a href="hello">Say hello</a> or <a href="/second/exit">Exit</a>
+<a href="hello?name=Default&surname=Default">Say hello with params</a> or <a href="/second/exit">Exit</a>
 
 </body>
 </html>
