--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -6,6 +6,6 @@
 
 <p>HELLO</p>
 
-<a href="goodbye">Say goodbye</a> or <a href="/second/exit">Exit</a>
+<a href="/first/goodbye">Say goodbye</a> or <a href="/second/exit">Exit</a>
 </body>
 </html>
