--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <body>
 
 <h1>HELLO</h1>
@@ -7,5 +7,7 @@
 <p>HELLO</p>
 
 <a href="/first/goodbye">Say goodbye</a> or <a href="/second/exit">Exit</a>
+
+<p th:text="${message}"></p>
 </body>
 </html>
